--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solydxk-welcome (1.0.2) solydxk; urgency=low
+
+  * Include Games page
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Sat, 03 Jan 2015 19:00:00 +0100
+
 solydxk-welcome (1.0.1) solydxk; urgency=low
 
   * Differentiate between SolydX and SolydK packages
