--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+solydxk-welcome (1.0.5) solydxk; urgency=low
+
+  * Integrated HTML translations into .pot file
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Tue, 28 Apr 2015 11:00:00 +0100
+
+solydxk-welcome (1.0.4) solydxk; urgency=low
+
+  * Added Steam to game page
+  * Added donate button to welcome page
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Sun, 16 Feb 2015 19:00:00 +0100
+
 solydxk-welcome (1.0.2) solydxk; urgency=low
 
   * Include Games page
