--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-solydxk-welcome (1.0.5) solydxk; urgency=low
+solydxk-welcome (1.0.6) solydxk; urgency=low
 
   * Integrated HTML translations into .pot file
+  * Added nl and ca translations
 
  -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Tue, 28 Apr 2015 11:00:00 +0100
 
