--- a/po/pot/drivers.pot
+++ b/po/pot/drivers.pot
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-04-28 11:29+0200\n"
+"POT-Creation-Date: 2015-04-29 14:44+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -40,6 +40,6 @@ msgstr ""
 #: en/drivers.html+html.body.div.div.p:16
 msgid ""
 "Currently <strong>Nvidia</strong>, <strong>ATI</strong> and "
-"<strong>Broadcom</strong> drivers can be installed and allows to install the "
-"<strong>PAE</strong> kernel for multi-core 32-bit systems."
+"<strong>Broadcom</strong> drivers can be installed. DDM also allows to "
+"install the <strong>PAE</strong> kernel for multi-core 32-bit systems."
 msgstr ""
