--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solydxk-welcome (1.0.8) solydxk; urgency=low
+
+  * Fixed bug not showing English pages when translated language does not exist
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Mon, 29 Jun 2015 13:00:00 +0100
+
 solydxk-welcome (1.0.7) solydxk; urgency=low
 
   * Now translations are actually working
